Perubahan untuk menu kategori

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
                   <nav id="mainNav">
                      <ul class="mainNav lu-nav">
                         <li class="li-nav">
-                           <a href="real-good.html" class="pull-left">
+                           <a href="menu.html" class="pull-left">
                            <span class="menuItem-small">Real Good</span>
                            <span class="menuItem-medium">Food</span>
                            </a>
                         </li>
                         <li class="li-nav">
-                           <a href="#" class="pull-left">
+                           <a href="offers.html" class="pull-left">
                            <span class="menuItem-small">Get Fresh</span>
                            <span class="menuItem-medium">Offers</span>
                            </a>
