Penambahan Button di Bawah

--- a/fix-grid.html
+++ b/fix-grid.html
@@ -332,6 +332,17 @@
                </div>
             </div>
          </div>
+
+         <!-- BUTTON TO THE TOP -->
+         <div class="row bg-btn-footer">
+            <div class="col-md-4"></div>
+            <div class="col-md-4">
+               <div class="bk-btn-footer center-block">
+               <a href="#"><p class="font-button">Back to The Top <img src="assets/images/top-icon.png"><p></a>
+               </div>
+            </div>
+            <div class="col-md-4"></div>
+         </div>
       </div>
    </body>
    <script src="assets/vendor/jquery/jquery.min.js"></script>
