--- a/menu.html
+++ b/menu.html
@@ -181,6 +181,7 @@
                   <a href="#"><div class="col-md-3 tombol-menu btn-2">GLUTEN SENSITIVE LIST</div></a>
                   <a href="#"><div class="col-md-3 tombol-menu btn-3">VIEW MY MEAL</div></a>
                   <a href="#"><div class="col-md-3 tombol-menu btn-4">ALLERGENS</div></a>
+               </div>
             </div>
             <div class="col-md-2"></div>
          </div>
@@ -347,6 +348,17 @@
                   </ul>
                </div>
             </div>
+         </div>
+
+         <!-- BUTTON TO THE TOP -->
+         <div class="row bg-btn-footer">
+            <div class="col-md-4"></div>
+            <div class="col-md-4">
+               <div class="bk-btn-footer center-block">
+               <a href="#"><p class="font-button">Back to The Top <img src="assets/images/top-icon.png"><p></a>
+               </div>
+            </div>
+            <div class="col-md-4"></div>
          </div>
       </div>
    </body>
