Update Page HTML Burger King Website

--- a/fix-grid.html
+++ b/fix-grid.html
@@ -4,12 +4,12 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>BURGER KING</title>
-      <link rel="shortcut icon" href="assets/images/BK_Favicon.ico" type="image/vnd.microsoft.icon"/>
-      <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-      <link href="assets/css/styles-fix.css" rel="stylesheet">
+      <link rel="shortcut icon" href="library/images/BK_Favicon.ico" type="image/vnd.microsoft.icon"/>
+      <link href="library/css/bootstrap.min.css" rel="stylesheet">
+      <link href="library/css/styles-fix.css" rel="stylesheet">
       <!-- Owl Slider -->
-      <link rel="stylesheet" href="assets/vendor/owlcarousel/css/owl.carousel.min.css">
-      <link rel="stylesheet" href="assets/vendor/owlcarousel/css/owl.theme.default.min.css">
+      <link rel="stylesheet" href="library/js/owlcarousel/css/owl.carousel.min.css">
+      <link rel="stylesheet" href="library/js/owlcarousel/css/owl.theme.default.min.css">
    </head>
    <body>
       <div class="container-fluid">
@@ -78,13 +78,13 @@
          <div class="row">
             <div id="owl-demo" class="owl-carousel owl-theme bk_carousel_slide">
                <div class="item">
-                  <img src="assets/images/slide-1.jpg">  
+                  <img src="library/images/slide-1.jpg">  
                </div>
                <div class="item">
-                  <img src="assets/images/slide-2.jpg">  
+                  <img src="library/images/slide-2.jpg">  
                </div>
                <div class="item">
-                  <img src="assets/images/slide-3.jpg">  
+                  <img src="library/images/slide-3.jpg">  
                </div>
             </div>
          </div>
@@ -107,13 +107,13 @@
             <div class="flip-width body_satu">
                <div id="owl-demo-dua" class="owl-carousel owl-theme">
                   <div class="item flip-container">
-                     <img src="assets/images/slide-burger/1.jpg">  
+                     <img src="library/images/slide-burger/1.jpg">  
                   </div>
                   <div class="item flip-container">
-                     <img src="assets/images/slide-burger/2.jpg">  
+                     <img src="library/images/slide-burger/2.jpg">  
                   </div>
                   <div class="item flip-container">
-                     <img src="assets/images/slide-burger/3.jpg">  
+                     <img src="library/images/slide-burger/3.jpg">  
                   </div>
                </div>
             </div>
@@ -338,15 +338,15 @@
             <div class="col-md-4"></div>
             <div class="col-md-4">
                <div class="bk-btn-footer center-block">
-               <a href="#"><p class="font-button">Back to The Top <img src="assets/images/top-icon.png"><p></a>
+               <a href="#"><p class="font-button">Back to The Top <img src="library/images/top-icon.png"><p></a>
                </div>
             </div>
             <div class="col-md-4"></div>
          </div>
       </div>
    </body>
-   <script src="assets/vendor/jquery/jquery.min.js"></script>
-   <script src="assets/vendor/owlcarousel/js/owl.carousel.min.js"></script>
-   <script src="assets/vendor/owlcarousel/js/owl.carousel.js"></script>
-   <script src="assets/vendor/owlcarousel/js/custom-owlcarousel.js"></script>
+   <script src="library/js/jquery/jquery.min.js"></script>
+   <script src="library/js/owlcarousel/js/owl.carousel.min.js"></script>
+   <script src="library/js/owlcarousel/js/owl.carousel.js"></script>
+   <script src="library/js/owlcarousel/js/custom-owlcarousel.js"></script>
 </html>
