--- a/food.html
+++ b/food.html
@@ -4,12 +4,12 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>BURGER KING</title>
-      <link rel="shortcut icon" href="assets/images/BK_Favicon.ico" type="image/vnd.microsoft.icon"/>
-      <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-      <link href="assets/css/styles.css" rel="stylesheet">
+      <link rel="shortcut icon" href="library/images/BK_Favicon.ico" type="image/vnd.microsoft.icon"/>
+      <link href="library/css/bootstrap.min.css" rel="stylesheet">
+      <link href="library/css/styles.css" rel="stylesheet">
       <!-- Owl Slider -->
-      <link rel="stylesheet" href="assets/vendor/owlcarousel/css/owl.carousel.min.css">
-      <link rel="stylesheet" href="assets/vendor/owlcarousel/css/owl.theme.default.min.css">
+      <link rel="stylesheet" href="library/js/owlcarousel/css/owl.carousel.min.css">
+      <link rel="stylesheet" href="library/js/owlcarousel/css/owl.theme.default.min.css">
    </head>
    <body>
       <div class="container-fluid">
@@ -39,7 +39,7 @@
                   <nav id="mainNav">
                      <ul class="mainNav lu-nav">
                         <li class="li-nav">
-                           <a href="menu.html" class="pull-left">
+                           <a href="food.html" class="pull-left">
                            <span class="menuItem-small">Real Good</span>
                            <span class="menuItem-medium">Food</span>
                            </a>
@@ -88,7 +88,7 @@
             <div class="col-md-3">
                <div class="food-item">
                   <a href="#">
-                     <img src="assets/images/food-kategori/burger.jpg">
+                     <img src="library/images/food-kategori/burger.jpg">
                      <h1 class="text-align-menu-item" style="color: #8b542f">BURGERS</h1>
                   </a>
                </div>
@@ -96,7 +96,7 @@
             <div class="col-md-4">
                <div class="food-item" style="margin-left: 70px">
                   <a href="#">
-                     <img src="assets/images/food-kategori/chicken-more.png">
+                     <img src="library/images/food-kategori/chicken-more.png">
                      <h1 class="text-align-menu-item" style="color: #84332e">HOT DOGS</h1>
                   </a>
                </div>
@@ -104,7 +104,7 @@
             <div class="col-md-3">
                <div class="food-item">
                   <a href="#">
-                     <img src="assets/images/food-kategori/hot-dogs.jpg">
+                     <img src="library/images/food-kategori/hot-dogs.jpg">
                      <h1 class="text-align-menu-item" style="color: #ed7800">CHICKEN MORE</h1>
                   </a>
                </div>
@@ -118,7 +118,7 @@
             <div class="col-md-3">
                <div class="food-item">
                   <a href="#">
-                     <img src="assets/images/food-kategori/salads-veggies.jpg">
+                     <img src="library/images/food-kategori/salads-veggies.jpg">
                      <h1 class="text-align-menu-item" style="color: #59980d">SALADS & VEGGIES</h1>
                   </a>
                </div>
@@ -126,7 +126,7 @@
             <div class="col-md-4">
                <div class="food-item" style="margin-left: 70px">
                   <a href="#">
-                     <img src="assets/images/food-kategori/breakfast.jpg">
+                     <img src="library/images/food-kategori/breakfast.jpg">
                      <h1 class="text-align-menu-item" style="color: #ee8324">BREAKFAST</h1>
                   </a>
                </div>
@@ -134,7 +134,7 @@
             <div class="col-md-3">
                <div class="food-item">
                   <a href="#">
-                     <img src="assets/images/food-kategori/beverages.jpg">
+                     <img src="library/images/food-kategori/beverages.jpg">
                      <h1 class="text-align-menu-item" style="color: #a2007d">BEVERAGES</h1>
                   </a>
                </div>
@@ -148,7 +148,7 @@
             <div class="col-md-3">
                <div class="food-item">
                   <a href="#">
-                     <img src="assets/images/food-kategori/coffee.jpg">
+                     <img src="library/images/food-kategori/coffee.jpg">
                      <h1 class="text-align-menu-item" style="color: #f36279">COFFEE</h1>
                   </a>
                </div>
@@ -156,7 +156,7 @@
             <div class="col-md-4">
                <div class="food-item" style="margin-left: 70px">
                   <a href="#">
-                     <img src="assets/images/food-kategori/sides.jpg">
+                     <img src="library/images/food-kategori/sides.jpg">
                      <h1 class="text-align-menu-item" style="color: #f6a800">SIDES</h1>
                   </a>
                </div>
@@ -164,7 +164,7 @@
             <div class="col-md-3">
                <div class="food-item">
                   <a href="#">
-                     <img src="assets/images/food-kategori/sweets.jpg">
+                     <img src="library/images/food-kategori/sweets.jpg">
                      <h1 class="text-align-menu-item" style="color: #0071ce">SWEETS</h1>
                   </a>
                </div>
@@ -355,15 +355,16 @@
             <div class="col-md-4"></div>
             <div class="col-md-4">
                <div class="bk-btn-footer center-block">
-               <a href="#"><p class="font-button">Back to The Top <img src="assets/images/top-icon.png"><p></a>
+               <a id="back-to-top" href="#"><p class="font-button">Back to The Top <img src="library/images/top-icon.png"><p></a>
                </div>
             </div>
             <div class="col-md-4"></div>
          </div>
       </div>
    </body>
-   <script src="assets/vendor/jquery/jquery.min.js"></script>
-   <script src="assets/vendor/owlcarousel/js/owl.carousel.min.js"></script>
-   <script src="assets/vendor/owlcarousel/js/owl.carousel.js"></script>
-   <script src="assets/vendor/owlcarousel/js/custom-owlcarousel.js"></script>
+   <script src="library/js/jquery/jquery.min.js"></script>
+   <script src="library/js/jquery/custom-jquery.js"></script>
+   <script src="library/js/owlcarousel/js/owl.carousel.min.js"></script>
+   <script src="library/js/owlcarousel/js/owl.carousel.js"></script>
+   <script src="library/js/owlcarousel/js/custom-owlcarousel.js"></script>
 </html>
