--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <html lang="en" dir="ltr">
    <head>
-      <meta charset="utf-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>BURGER KING</title>
-      <link rel="shortcut icon" href="assets/images/BK_Favicon.ico" type="image/vnd.microsoft.icon"/>
-      <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-      <link href="assets/css/styles.css" rel="stylesheet">
-      <!-- Owl Slider -->
-      <link rel="stylesheet" href="assets/vendor/owlcarousel/css/owl.carousel.min.css">
-      <link rel="stylesheet" href="assets/vendor/owlcarousel/css/owl.theme.default.min.css">
-   </head>
+         <meta charset="utf-8">
+         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+         <meta name="viewport" content="width=device-width, initial-scale=1">
+         <title>BURGER KING</title>
+         <link rel="shortcut icon" href="library/images/BK_Favicon.ico" type="image/vnd.microsoft.icon"/>
+         <link href="library/css/bootstrap.min.css" rel="stylesheet">
+         <link href="library/css/styles.css" rel="stylesheet">
+         <!-- Owl Slider -->
+         <link rel="stylesheet" href="library/js/owlcarousel/css/owl.carousel.min.css">
+         <link rel="stylesheet" href="library/js/owlcarousel/css/owl.theme.default.min.css">
+      </head>
    <body>
       <div class="container-fluid">
          <!-- Nav -->
@@ -39,7 +39,7 @@
                   <nav id="mainNav">
                      <ul class="mainNav lu-nav">
                         <li class="li-nav">
-                           <a href="menu.html" class="pull-left">
+                           <a href="food.html" class="pull-left">
                            <span class="menuItem-small">Real Good</span>
                            <span class="menuItem-medium">Food</span>
                            </a>
@@ -76,13 +76,13 @@
          <div class="row">
             <div id="owl-demo" class="owl-carousel owl-theme bk_carousel_slide">
                <div class="item">
-                  <img src="assets/images/slide-1.jpg">  
+                  <img src="library/images/slide-1.jpg">  
                </div>
                <div class="item">
-                  <img src="assets/images/slide-2.jpg">  
+                  <img src="library/images/slide-2.jpg">  
                </div>
                <div class="item">
-                  <img src="assets/images/slide-3.jpg">  
+                  <img src="library/images/slide-3.jpg">  
                </div>
             </div>
          </div>
@@ -103,13 +103,13 @@
             <div class="flip-width body_satu">
                <div id="owl-demo-dua" class="owl-carousel owl-theme">
                   <div class="item flip-container">
-                     <img src="assets/images/slide-burger/1.jpg">  
+                     <img src="library/images/slide-burger/1.jpg">  
                   </div>
                   <div class="item flip-container">
-                     <img src="assets/images/slide-burger/2.jpg">  
+                     <img src="library/images/slide-burger/2.jpg">  
                   </div>
                   <div class="item flip-container">
-                     <img src="assets/images/slide-burger/3.jpg">  
+                     <img src="library/images/slide-burger/3.jpg">  
                   </div>
                </div>
             </div>
@@ -329,15 +329,18 @@
             <div class="col-md-4"></div>
             <div class="col-md-4">
                <div class="bk-btn-footer center-block">
-               <a href="#"><p class="font-button">Back to The Top <img src="assets/images/top-icon.png"><p></a>
+               <a id="back-to-top" href="#"><p class="font-button">Back to The Top <img src="library/images/top-icon.png"><p></a>
                </div>
             </div>
             <div class="col-md-4"></div>
          </div>
+
       </div>
    </body>
-   <script src="assets/vendor/jquery/jquery.min.js"></script>
-   <script src="assets/vendor/owlcarousel/js/owl.carousel.min.js"></script>
-   <script src="assets/vendor/owlcarousel/js/owl.carousel.js"></script>
-   <script src="assets/vendor/owlcarousel/js/custom-owlcarousel.js"></script>
+   <script src="library/js/jquery/jquery.min.js"></script>
+   <script src="library/js/jquery/custom-jquery.js"></script>
+   <script src="library/js/owlcarousel/js/owl.carousel.min.js"></script>
+   <script src="library/js/owlcarousel/js/owl.carousel.js"></script>
+   <script src="library/js/owlcarousel/js/custom-owlcarousel.js"></script>
+
 </html>
