--- a/offers.html
+++ b/offers.html
@@ -4,12 +4,12 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>BURGER KING</title>
-      <link rel="shortcut icon" href="assets/images/BK_Favicon.ico" type="image/vnd.microsoft.icon"/>
-      <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-      <link href="assets/css/styles.css" rel="stylesheet">
+      <link rel="shortcut icon" href="library/images/BK_Favicon.ico" type="image/vnd.microsoft.icon"/>
+      <link href="library/css/bootstrap.min.css" rel="stylesheet">
+      <link href="library/css/styles.css" rel="stylesheet">
       <!-- Owl Slider -->
-      <link rel="stylesheet" href="assets/vendor/owlcarousel/css/owl.carousel.min.css">
-      <link rel="stylesheet" href="assets/vendor/owlcarousel/css/owl.theme.default.min.css">
+      <link rel="stylesheet" href="library/js/owlcarousel/css/owl.carousel.min.css">
+      <link rel="stylesheet" href="library/js/owlcarousel/css/owl.theme.default.min.css">
    </head>
    <body>
       <div class="container-fluid">
@@ -39,7 +39,7 @@
                   <nav id="mainNav">
                      <ul class="mainNav lu-nav">
                         <li class="li-nav">
-                           <a href="menu.html" class="pull-left">
+                           <a href="food.html" class="pull-left">
                            <span class="menuItem-small">Real Good</span>
                            <span class="menuItem-medium">Food</span>
                            </a>
@@ -72,118 +72,34 @@
                </div>
             </header>
          </div>
-         <!-- MENU BURGER KING -->
+
+         <!-- OFFER Content -->
          <div class="row">
-            <div class="col-md-4 menu-bg-burger"></div>
-            <div class="col-md-4">
-               <h1 class="menu-burger">MENU</h1>
+            <div class="row-offer bg-offer">
+               <img src="library/images/image-offers-1.jpg">
             </div>
-            <div class="col-md-4"></div>
          </div>
          
-         <!-- MENU KATEGORI -->
-         <!-- Menu ke 1 -->
+         <!-- SLIDER Konten -->
          <div class="row">
-            <div class="col-md-1"></div>
-            <div class="col-md-3">
-               <div class="food-item">
-                  <a href="#">
-                     <img src="assets/images/food-kategori/burger.jpg">
-                     <h1 class="text-align-menu-item" style="color: #8b542f">BURGERS</h1>
-                  </a>
+            <div class="flip-width conten-silder">
+               <div id="owl-demo-offers" class="owl-carousel owl-theme">
+                  <div class="item flip-offer">
+                     <a href="#"><img src="library/images/offers/offers-1.png"></a>
+                     <a class="flip-a bk-btn bk-btn-orange" href="#">2 FOR $10 MEAL DEAL</a>
+                  </div>
+                  <div class="item flip-offer">
+                     <a href="#"><img src="library/images/offers/offers-2.png"></a>
+                     <a class="flip-a bk-btn bk-btn-orange" href="#">2 FOR $4 BREAKFAST</a>
+                  </div>
+                  <div class="item flip-offer">
+                     <a href=""><img src="library/images/offers/offers-3.jpg"></a>
+                     <a class="flip-a bk-btn bk-btn-orange" href="#">2 FOR $5 MIX & MATCH</a>
+                  </div>
                </div>
-            </div>
-            <div class="col-md-4">
-               <div class="food-item" style="margin-left: 70px">
-                  <a href="#">
-                     <img src="assets/images/food-kategori/chicken-more.png">
-                     <h1 class="text-align-menu-item" style="color: #84332e">HOT DOGS</h1>
-                  </a>
-               </div>
-            </div>
-            <div class="col-md-3">
-               <div class="food-item">
-                  <a href="#">
-                     <img src="assets/images/food-kategori/hot-dogs.jpg">
-                     <h1 class="text-align-menu-item" style="color: #ed7800">CHICKEN MORE</h1>
-                  </a>
-               </div>
-            </div>
-            <div class="col-md-1"></div>
-         </div>
-
-         <!-- Menu ke 2 -->
-         <div class="row">
-            <div class="col-md-1"></div>
-            <div class="col-md-3">
-               <div class="food-item">
-                  <a href="#">
-                     <img src="assets/images/food-kategori/salads-veggies.jpg">
-                     <h1 class="text-align-menu-item" style="color: #59980d">SALADS & VEGGIES</h1>
-                  </a>
-               </div>
-            </div>
-            <div class="col-md-4">
-               <div class="food-item" style="margin-left: 70px">
-                  <a href="#">
-                     <img src="assets/images/food-kategori/breakfast.jpg">
-                     <h1 class="text-align-menu-item" style="color: #ee8324">BREAKFAST</h1>
-                  </a>
-               </div>
-            </div>
-            <div class="col-md-3">
-               <div class="food-item">
-                  <a href="#">
-                     <img src="assets/images/food-kategori/beverages.jpg">
-                     <h1 class="text-align-menu-item" style="color: #a2007d">BEVERAGES</h1>
-                  </a>
-               </div>
-               <div class="col-md-1"></div>
             </div>
          </div>
 
-         <!-- Menu ke 3 -->
-         <div class="row">
-            <div class="col-md-1"></div>
-            <div class="col-md-3">
-               <div class="food-item">
-                  <a href="#">
-                     <img src="assets/images/food-kategori/coffee.jpg">
-                     <h1 class="text-align-menu-item" style="color: #f36279">COFFEE</h1>
-                  </a>
-               </div>
-            </div>
-            <div class="col-md-4">
-               <div class="food-item" style="margin-left: 70px">
-                  <a href="#">
-                     <img src="assets/images/food-kategori/sides.jpg">
-                     <h1 class="text-align-menu-item" style="color: #f6a800">SIDES</h1>
-                  </a>
-               </div>
-            </div>
-            <div class="col-md-3">
-               <div class="food-item">
-                  <a href="#">
-                     <img src="assets/images/food-kategori/sweets.jpg">
-                     <h1 class="text-align-menu-item" style="color: #0071ce">SWEETS</h1>
-                  </a>
-               </div>
-               <div class="col-md-1"></div>
-            </div>
-         </div>
-
-         <!-- BUTTON MENU-->
-         <div class="row">
-            <div class="col-md-2"></div>
-            <div class="col-md-8">
-               <div class="row">
-                  <a href="#"><div class="col-md-3 tombol-menu btn-1">FULL MENU NUTRISI</div></a>
-                  <a href="#"><div class="col-md-3 tombol-menu btn-2">GLUTEN SENSITIVE LIST</div></a>
-                  <a href="#"><div class="col-md-3 tombol-menu btn-3">VIEW MY MEAL</div></a>
-                  <a href="#"><div class="col-md-3 tombol-menu btn-4">ALLERGENS</div></a>
-            </div>
-            <div class="col-md-2"></div>
-         </div>
          <!-- FOOTER -->
          <div class="row">
             <div class="row footer">
@@ -348,10 +264,21 @@
                </div>
             </div>
          </div>
+         <!-- BUTTON TO THE TOP -->
+         <div class="row bg-btn-footer">
+            <div class="col-md-4"></div>
+            <div class="col-md-4">
+               <div class="bk-btn-footer center-block">
+               <a id="back-to-top" href="#"><p class="font-button">Back to The Top <img src="library/images/top-icon.png"><p></a>
+               </div>
+            </div>
+            <div class="col-md-4"></div>
+         </div>
       </div>
    </body>
-   <script src="assets/vendor/jquery/jquery.min.js"></script>
-   <script src="assets/vendor/owlcarousel/js/owl.carousel.min.js"></script>
-   <script src="assets/vendor/owlcarousel/js/owl.carousel.js"></script>
-   <script src="assets/vendor/owlcarousel/js/custom-owlcarousel.js"></script>
+   <script src="library/js/jquery/jquery.min.js"></script>
+   <script src="library/js/jquery/custom-jquery.js"></script>
+   <script src="library/js/owlcarousel/js/owl.carousel.min.js"></script>
+   <script src="library/js/owlcarousel/js/owl.carousel.js"></script>
+   <script src="library/js/owlcarousel/js/custom-owlcarousel.js"></script>
 </html>
