Update Year Agar Otomatis Mengikuti Tahun Sekarang

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                <div class="col-md-2"></div>
             </div>
          </div>
-         
+
          <!-- FOOTER BUTTOM -->
          <div class="row">
             <div class="row footer content-footer">
@@ -281,7 +281,7 @@
                <div class="col-md-4 bk-logo footer-nav">
                   <i class="icon icon_logo-word"></i>
                   <br />
-                  <p>TM & Copyright 2017 Burger King Corporation. All Rights Reserved.</p>
+                  <p>TM & Copyright <b id="copyright_year"></b> Burger King Corporation. All Rights Reserved.</p>
                   <ul class="tertiary-menu">
                      <li class="span6 pull-left">
                      </li>
