Update Menu Kategori Food

--- a/burger.html
+++ b/burger.html
@@ -74,11 +74,55 @@
                </div>
             </header>
          </div>
+
+         <!-- MENU SECOND -->
+         <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
+               <ul>
+                  <li class="menu-space">
+                     <a href="#" class="menu-active">Burges</a>
+                  </li>
+                  <li class="menu-space">
+                     <a href="">Hot Dogs</a>
+                  </li>
+                  <li class="menu-space">
+                     <a href="">Chicken & More</a>
+                  </li>
+                  <li class="menu-space">
+                     <a href="">Salad & Veggies</a>
+                  </li>
+                  <li class="menu-space">
+                     <a href="">Breakfast</a>
+                  </li>
+                  <li class="menu-space">
+                     <a href="">Bevarges</a>
+                  </li>
+                  <li class="menu-space">
+                     <a href="">Coffee</a>
+                  </li>
+                  <li class="menu-space">
+                     <a href="">Sides</a>
+                  </li>
+                  <li class="menu-space">
+                     <a href="">Sweets</a>
+                  </li>
+                  <li class="menu-space">
+                     <a href="">Value Menu</a>
+                  </li>
+                  <li class="menu-space">
+                     <a href="">King JR Meals</a>
+                  </li>
+               </ul>
+            </div>
+            <div class="col-md-3"></div>
+         </div>
+
          <!-- MENU BURGER KING -->
          <div class="row">
             <div class="col-md-4 menu-bg-burger"></div>
             <div class="col-md-4">
-               <h1 class="menu-burger">MENU</h1>
+               <h1 class="tulisan-header-burger">FLAME-GRILLED BURGERS</h1>
             </div>
             <div class="col-md-4"></div>
          </div>
@@ -89,29 +133,49 @@
             <div class="col-md-1"></div>
             <div class="col-md-3">
                <div class="food-item">
-                  <a href="burger.html">
-                     <img src="library/images/food-kategori/burger.jpg">
-                     <h1 class="text-align-menu-item" style="color: #8b542f">BURGERS</h1>
+                  <a href="#demo" data-toggle="collapse">
+                     <img src="library/images/food-kategori/burger/burger-1.jpg">
+                     <div class="row text-align-menu-item">STEAKHOUSE KING™</div>
                   </a>
                </div>
             </div>
             <div class="col-md-4">
                <div class="food-item" style="margin-left: 70px">
-                  <a href="#">
-                     <img src="library/images/food-kategori/chicken-more.png">
-                     <h1 class="text-align-menu-item" style="color: #84332e">HOT DOGS</h1>
+                  <a href="#demo" data-toggle="collapse">
+                     <img src="library/images/food-kategori/burger/burger-2.jpg">
+                     <div class="row text-align-menu-item">WHOPPER® Sandwich</div>
                   </a>
                </div>
             </div>
             <div class="col-md-3">
                <div class="food-item">
-                  <a href="#">
-                     <img src="library/images/food-kategori/hot-dogs.jpg">
-                     <h1 class="text-align-menu-item" style="color: #ed7800">CHICKEN MORE</h1>
+                  <a href="#demo" data-toggle="collapse">
+                     <img src="library/images/food-kategori/burger/burger-3.jpg">
+                     <div class="row text-align-menu-item">DOUBLE Sandwich</div>
                   </a>
                </div>
             </div>
             <div class="col-md-1"></div>
+         </div>
+
+         <!-- COLLAPSE -->
+         <div class="row">
+            <div id="demo" class="collapse collapse-image" aria-expanded="true">
+               <div class="col-md-1"></div>
+               <div class="col-md-4 margin-left">
+                  <div class="title-collapse">STEAKHOUSE KING™</div>
+                  <div class="sub-title-collapse">Big and meaty</div>
+                  <p class="p-collapse">The STEAKHOUSE KING™ Sandwich features two ¼ lb* savory flame-grilled beef patties, topped with 3 half-strips of thick-cut smoked bacon, A.1.® Thick & Hearty sauce, crispy onions, melted American cheese and creamy mayonnaise all on our signature sesame seed bun.</p>
+                  <span style="font-size: 12px; line-height: 1.538em;">*Based on pre-cooked patty weight.</span>
+                  <p><br><span style="font-size: 12px;">A.1. is a registered trademark of KRAFT FOOD GROUP, used under license.</span></p>
+
+                  <a class="bk-btn bk-btn-orange" href="#">Info & Nutrition</a>
+               </div>
+               <div class="col-md-4"> 
+                  <img class="img-burger-collapse" src="library/images/collapse/collapse-1.png"> 
+               </div>
+               <div class="col-md-2"></div>
+            </div>
          </div>
 
          <!-- Menu ke 2 -->
@@ -120,24 +184,24 @@
             <div class="col-md-3">
                <div class="food-item">
                   <a href="#">
-                     <img src="library/images/food-kategori/salads-veggies.jpg">
-                     <h1 class="text-align-menu-item" style="color: #59980d">SALADS & VEGGIES</h1>
+                     <img src="library/images/food-kategori/burger/burger-4.jpg">
+                     <div class="row text-align-menu-item">WHOPPER JR.® Sandwich</div>
                   </a>
                </div>
             </div>
             <div class="col-md-4">
                <div class="food-item" style="margin-left: 70px">
                   <a href="#">
-                     <img src="library/images/food-kategori/breakfast.jpg">
-                     <h1 class="text-align-menu-item" style="color: #ee8324">BREAKFAST</h1>
+                     <img src="library/images/food-kategori/burger/burger-5.png">
+                     <div class="row text-align-menu-item">BACON KING™ Sandwich</div>
                   </a>
                </div>
             </div>
             <div class="col-md-3">
                <div class="food-item">
                   <a href="#">
-                     <img src="library/images/food-kategori/beverages.jpg">
-                     <h1 class="text-align-menu-item" style="color: #a2007d">BEVERAGES</h1>
+                     <img src="library/images/food-kategori/burger/burger-6.png">
+                     <div class="row text-align-menu-item">Extra Long Cheeseburger</div>
                   </a>
                </div>
                <div class="col-md-1"></div>
@@ -150,24 +214,54 @@
             <div class="col-md-3">
                <div class="food-item">
                   <a href="#">
-                     <img src="library/images/food-kategori/coffee.jpg">
-                     <h1 class="text-align-menu-item" style="color: #f36279">COFFEE</h1>
+                     <img src="library/images/food-kategori/burger/burger-7.jpg">
+                     <div class="row text-align-menu-item">Homestyle Cheeseburger</div>
                   </a>
                </div>
             </div>
             <div class="col-md-4">
                <div class="food-item" style="margin-left: 70px">
                   <a href="#">
-                     <img src="library/images/food-kategori/sides.jpg">
-                     <h1 class="text-align-menu-item" style="color: #f6a800">SIDES</h1>
+                     <img src="library/images/food-kategori/burger/burger-8.png">
+                     <div class="row text-align-menu-item">Bacon WHOPPER®</div>
                   </a>
                </div>
             </div>
             <div class="col-md-3">
                <div class="food-item">
                   <a href="#">
-                     <img src="library/images/food-kategori/sweets.jpg">
-                     <h1 class="text-align-menu-item" style="color: #0071ce">SWEETS</h1>
+                     <img src="library/images/food-kategori/burger/burger-9.png">
+                     <div class="row text-align-menu-item">Hamburger</div>
+                  </a>
+               </div>
+               <div class="col-md-1"></div>
+            </div>
+         </div>
+
+         <!-- Menu ke 4 -->
+         <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-3">
+               <div class="food-item">
+                  <a href="#">
+                     <img src="library/images/food-kategori/burger/burger-10.png">
+                     <div class="row text-align-menu-item">Cheeseburger</div>
+                  </a>
+               </div>
+            </div>
+            <div class="col-md-4">
+               <div class="food-item" style="margin-left: 70px">
+                  <a href="#">
+                     <img src="library/images/food-kategori/burger/burger-11.png">
+                     <div class="row text-align-menu-item">Double Cheeseburger</div>
+                  </a>
+               </div>
+            </div>
+            <div class="col-md-3">
+               <div class="food-item">
+                  <a href="#">
+                     <img src="library/images/food-kategori/burger/burger-12.png">
+                     <div class="row text-align-menu-item">Bacon Cheeseburger</div>
                   </a>
                </div>
                <div class="col-md-1"></div>
@@ -178,14 +272,25 @@
          <div class="row">
             <div class="col-md-2"></div>
             <div class="col-md-8">
-               <div class="row">
-                  <a href="#"><div class="col-md-3 tombol-menu btn-1">FULL MENU NUTRISI</div></a>
+               <div class="row the-icons">
+
+                  <a href="#"><div class="col-md-3 tombol-menu btn-1">FULL MENU NUTRISI <span class="glyphicon glyphicon-list-alt"></span></div></a>
                   <a href="#"><div class="col-md-3 tombol-menu btn-2">GLUTEN SENSITIVE LIST</div></a>
                   <a href="#"><div class="col-md-3 tombol-menu btn-3">VIEW MY MEAL</div></a>
                   <a href="#"><div class="col-md-3 tombol-menu btn-4">ALLERGENS</div></a>
                </div>
             </div>
          </div>
+
+         <!-- IMAGE FRESHLY -->
+         <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
+               <img class="image-burger" src="library/images/food-kategori/burger/burger-11.jpg">
+            </div>
+            <div class="col-md-2"></div>
+         </div>
+
          <!-- FOOTER -->
          <div class="row">
             <div class="row footer">
