--- a/offers.html
+++ b/offers.html
@@ -61,10 +61,12 @@
                         <li class="li-nav">
                            <a href="#" class="pull-left">
                            <span class="menuItem-small">Newsletter</span>
-                           <span class="menuItem-medium">Sign Up
+                           <span class="menuItem-medium">
+                           <span data-toggle="modal" data-target="#myModal">Sign Up</span>
                            <i class="icon icon_pindrop-sosmed icon_facebook"></i>
                            <i class="icon icon_pindrop-sosmed icon_twitter"></i>
-                           <i class="icon icon_pindrop-sosmed icon_instagram"></i></span>
+                           <i class="icon icon_pindrop-sosmed icon_instagram"></i>
+                           </span>
                            </a>
                         </li>
                      </ul>
@@ -219,7 +221,7 @@
                <div class="col-md-4 bk-logo footer-nav">
                   <i class="icon icon_logo-word"></i>
                   <br />
-                  <p>TM & Copyright 2017 Burger King Corporation. All Rights Reserved.</p>
+                  <p>TM & Copyright <b id="copyright_year"></b> Burger King Corporation. All Rights Reserved.</p>
                   <ul class="tertiary-menu">
                      <li class="span6 pull-left">
                      </li>
@@ -252,7 +254,7 @@
                   </ul>
                </div>
                <div class="col-md-2 footer-nav">
-                  <p class="judul"><b>SHARE THIS WEBSITE</b></p>
+                  <p class="judul"><b>DOWNLOAD THE <i>BK</i><sup>®</sup> App</b></p>
                   <ul class="tertiary-menu">
                      <li class="span6 pull-left">
                         <a href="#"><i class="icon icon_email-crm-google-play"></i></a>
@@ -269,16 +271,95 @@
             <div class="col-md-4"></div>
             <div class="col-md-4">
                <div class="bk-btn-footer center-block">
-               <a id="back-to-top" href="#"><p class="font-button">Back to The Top <img src="library/images/top-icon.png"><p></a>
+                  <a id="back-to-top" href="#">
+                     <p class="font-button">Back to The Top <img src="library/images/top-icon.png">
+                     <p>
+                  </a>
                </div>
             </div>
             <div class="col-md-4"></div>
          </div>
-      </div>
+
+         <!-- MODAL SIGN UP-->
+         <div class="row">
+            <div class="modal fade" id="myModal" role="dialog">
+               <div class="modal-dialog modal-lg">
+                  <!-- Modal content-->
+                  <div class="modal-content">
+                     <div class="modal-body">
+                        <div class="row">
+                           <div class="col-md-4 form-image">
+                              <img id="img-icon-header" src="library/images/logo-transparan.png">
+                              <div id="owl-demo-modal" class="owl-carousel owl-theme"">
+                                 <img id="img-icon-burger" src="library/images/food-kategori/burger.jpg">
+                                 <img id="img-icon-burger" src="library/images/food-kategori/chicken-more.png">
+                                 <img id="img-icon-burger" src="library/images/food-kategori/breakfast.jpg">
+                              </div>
+                           </div>
+                           <div class="col-md-8 form-content">
+                              <h1>SIGN UP FOR BK ALERTS</h1>
+                              <p class="bk-p">Be in the know about BK® news, fresh offers, coupons, and other delicious deals. Simply fill out the form below and we'll do the rest.</p>
+                              <form>
+                                 <div class="form-group">
+                                    <label for="name">NAME*</label>
+                                    <div class="form-group form-inline">
+                                       <input type="name" class="form-control" placeholder="First Name">
+                                       <input type="name" class="form-control" placeholder="First Name">
+                                    </div>
+
+
+                                    <label for="name">ZIP CODE* & EMAIL*</label>
+                                    <div class="form-group form-inline">
+                                       <input type="name" class="form-control" placeholder="Zip Code">
+                                       <input type="name" class="form-control" placeholder="Email">
+                                    </div>
+
+                                    <label for="name">BIRTH DATE*</label>
+                                    <div class="form-group form-inline">
+                                       <select class="form-control selectWidth" id="month">
+                                          <option hidden >Month</option>
+                                       </select>
+                                       <select class="form-control selectWidth" id="day">
+                                          <option hidden >Day</option>
+                                       </select>
+                                       
+                                       <select class="form-control selectWidth" id="year">
+                                          <option hidden >Year</option>
+                                       </select>
+                                    </div>
+
+                                    <p class="bk-p">
+                                       By clicking the Submit button you agree to the site's Collection of Information Policy as outlined in the Burger King Corporation <a href="http://www.bk.com/privacy" target="_blank" style="color: #428bca">Privacy Policy</a>
+                                    </p>
+                                 </div>      
+                                 <div class="g-recaptcha" data-sitekey="6LfnXh4UAAAAAOFJNmIWqmo-ojFPbBdavXP4yKiV"></div><br/>
+                                 <div class="form-group form-inline">
+                                    <button type="submit" class="btn btn-warning btn-lg" style="width: 160px">SIGN UP</button>
+                                    <button type="submit" class="btn btn-warning btn-lg" style="width: 160px" data-dismiss="modal">CLOSE</button>
+                                 </div>
+                              </form>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
    </body>
+   <!-- Jquery -->
    <script src="library/js/jquery/jquery.min.js"></script>
    <script src="library/js/jquery/custom-jquery.js"></script>
+   
+   <!-- Bootstrap -->
+   <script src="library/js/bootstrap.min.js"></script>
+   <!-- Boostrap Select -->
+   <script src="library/js/bootstrap-select/custom-bootstrap.js"></script>
+   
+   <!-- Slider Owl Carousel -->
    <script src="library/js/owlcarousel/js/owl.carousel.min.js"></script>
    <script src="library/js/owlcarousel/js/owl.carousel.js"></script>
    <script src="library/js/owlcarousel/js/custom-owlcarousel.js"></script>
+
+   <!-- Re-Captcha -->
+   <script src='https://www.google.com/recaptcha/api.js'></script>
 </html>
